--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -124,8 +124,11 @@ a:hover, #header.nav-solid nav a:hover {
 /* Banner Background and Text Colors */
 
 #banner {
-    background: url("../images/banner-images/banner-image-1.jpg") no-repeat center top;
-    background-size:cover;
+/*
+    background: url("../images/banner-images/book-cover.jpg") no-repeat center top;
+    background-size:400px 650px;
+    background-position:bottom;
+*/
 }
 
 
